corrected project name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "php-feather/ignite",
+    "name": "php-feather/view",
     "description": "Feather View - View Engine",
     "license": "MIT",
 
