--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,16 @@
         }
     ],
     "minimum-stability": "stable",
-    "require": {
-        "php": ">=7.0",
-        "twig/twig": " ^3.0"
-    },
     "autoload": {
         "psr-4": {
             "Feather\\View\\": "src/"
         }
+    },
+    "require": {
+        "php": ">=7.0",
+        "twig/twig": " ^3.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
     }
 }
