--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     },
     "require": {
         "php": ">=7.0",
-        "twig/twig": " ^3.0"
+        "twig/twig": " ^3.0",
+        "jenssegers/blade": "^1.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
